feat: Add CORS configuration to support allowed origins from environment variables